Modifications on LTSpice path

--- a/Simulations/Filters/Scripts/Filter Simulation.ipynb
+++ b/Simulations/Filters/Scripts/Filter Simulation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Force another simulatior\n",
-    "simulator = r\"/home/abel/.wine/drive_c/Program Files (x86)/LTC/LTspiceIV/sdca3.exe\"\n",
-    "\n",
+    "simulator = r\"wine ~/.wine/drive_c/Program Files (x86)/LTC/LTspiceIV/sdac3.exe\"\n",
+    "#Program\\ Files\\ \\(x86\\)\n",
     "# select spice model\n",
     "LTC = SimRunner(output_folder='./temp')\n",
     "#LTC.create_netlist('./Low Pass Filter.asc')\n",
